<resources>
    <string name="app_name">掌上工大</string>
    <string name="username">学号</string>
    <string name="password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="login">登录</string>
    <string name="loggingin">登录中...</string>
    <string name="verification_code_hint">获取验证码</string>
    <string name="plzwait">请稍候...</string>
	<string name="logerr_net">网络异常</string>
	<string name="logerr_unk">未知错误</string>
	<string name="logerr_login">登录失败</string>
	<string name="prelogerr_name">请填写用户名</string>
	<string name="prelogerr_pass">请填写咪码</string>
	<string name="prelogerr_veri">请填写验证码</string>
	<string name="welcome">欢迎您，可爱的%1$s~</string>
	<string name="chooseaccount">选择账号</string>
	<string name="deleaccount">删除...</string>
	<string name="deleaccconfirm">删除</string>
	<string name="accnorecord">没有记录</string>

</resources>
