<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="b513.bjutpe.UI.MainActivity"
	android:layout_margin="20dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:text="@string/username"
			android:layout_weight="0.2"
			android:gravity="center"/>

		<EditText
			android:id="@+id/main_etUsername"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.8"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:text="@string/password"
			android:layout_weight="0.2"
			android:gravity="center"/>

		<EditText
			android:id="@+id/main_etPassword"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.8"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:text="@string/verification_code"
			android:layout_weight="0.2"
			android:gravity="center"/>

		<EditText
			android:id="@+id/main_etVerify"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.4"/>

		<ImageView
			android:id="@+id/main_ibVerify"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.4"
			android:onClick="onGetVcodeButtonClicked"
			android:scaleType="fitCenter"
			android:visibility="gone"/>

		<TextView
			android:layout_height="match_parent"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="0dp"
			android:text="@string/verification_code_hint"
			android:id="@+id/main_tvgetvcode"
			android:layout_weight="0.4"
			android:visibility="visible"
			android:gravity="center"
			android:onClick="onGetVcodeButtonClicked"/>

	</LinearLayout>

	<Button
		android:id="@+id/main_btnLogin"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:onClick="onLoginButtonClicked"/>

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_width="match_parent"
		android:text="Small Text"
		android:textColor="@color/main_tvError"
		android:id="@+id/main_tvError"
		android:visibility="gone"/>

	<ScrollView
		android:layout_height="wrap_content"
		android:layout_width="match_parent">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/main_logcat"/>

	</ScrollView>

</LinearLayout>

